<resources>
    <string name="app_name">LoginActivity</string>
    <string name="start">Start</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="need_help">Need Help?</string>
    <string name="chat">Chat</string>
</resources>